# MPILocalConcurrencyDetection

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  LocalConcurrencyDetection.cpp  LocalConcurrencyDetection.h  lcd.in  lcdBC.in
tests/C/: Makefile  ll_get_get_inwindow.c  ll_get_get_outwindow.c  ll_get_get_outwindow_ok.c  ll_get_load_inwindow.c  ll_get_load_outwindow.c  ll_get_put_inwindow.c  ll_get_put_outwindow.c  ll_load_get_inwindow.c  ll_load_get_outwindow.c  ll_load_load_inwindow.c  ll_load_load_outwindow.c  ll_load_put_inwindow.c  ll_load_put_outwindow.c  ll_load_store_inwindow.c  ll_load_store_outwindow.c  ll_put_get_inwindow.c  ll_put_get_outwindow.c  ll_put_load_inwindow.c  ll_put_put_inwindow.c  ll_put_put_outwindow.c  ll_store_get_inwindow.c  ll_store_get_outwindow.c  ll_store_put_inwindow.c  ll_store_put_outwindow.c  ll_store_store_inwindow.c  ll_store_store_outwindow.c
tests/FORTRAN/: Makefile  ll_get_store_outwindow.f90  ll_load_get_outwindow_loop.f90  ll_put_load_outwindow.f90  ll_put_store_outwindow.f90  ll_store_put_outwindow.f90
